--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 30px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -17,4 +17,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+  }
 }
